--- a/package.json
+++ b/package.json
@@ -11,21 +11,45 @@
   "dependencies": {
     "@openzeppelin/test-helpers": "^0.5.6",
     "@pancakeswap/pancake-swap-lib": "^0.0.1",
+    "base64-sol": "^1.1.0",
     "truffle": "^5.1.58",
     "truffle-flattener": "^1.4.4"
   },
   "devDependencies": {
+    "@ericxstone/hardhat-blockscout-verify": "^1.0.2",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomicfoundation/hardhat-verify": "^1.1.1",
     "@nomiclabs/buidler": "^1.4.7",
     "@nomiclabs/buidler-ethers": "^2.0.0",
     "@nomiclabs/buidler-truffle5": "^1.3.4",
     "@nomiclabs/buidler-waffle": "^2.0.0",
     "@nomiclabs/buidler-web3": "^1.3.4",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@openzeppelin/contracts": "3.4.1",
+    "@openzeppelin/hardhat-upgrades": "^1.28.0",
+    "@typechain/ethers-v6": "^0.4.3",
+    "@typechain/hardhat": "^9.0.0",
     "chai": "^4.2.0",
+    "dotenv": "^16.3.1",
     "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.14",
+    "ethers": "^5.7.2",
+    "find-config": "^1.0.0",
+    "fs-extra": "^11.1.1",
+    "hardhat": "^2.17.3",
+    "hardhat-watcher": "^2.5.0",
+    "readline-sync": "^1.4.10",
     "solidity-coverage": "^0.7.13",
+    "solidity-docgen": "^0.6.0-beta.36",
     "truffle-hdwallet-provider": "^1.0.17",
     "truffle-plugin-verify": "^0.4.0",
+    "ts-generator": "^0.1.1",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.3.1",
+    "typescript": "^5.2.2",
     "web3": "^1.3.0"
   }
 }
